# FL-AlgoForge

./: .gitignore  LICENSE  Motivation.ipynb  README.md  autograd_hacks.py  fedbalance.ipynb  logger_parser.py  main.py  pool_test.py  pyproject.toml  read&plot.ipynb  requirements.txt  test.ipynb  test_confidence.py
configs/: train.yaml
fl/: Model.py  __init__.py  main.bp  main.py  train.py
graduate/: plot_papar.ipynb
ipynb/: FedAvg_Confidence.ipynb  Motivation.ipynb  graident.ipynb  logits_compare.ipynb  test.ipynb
methods/: base.py  fedavg.py  fedbalance.py  fedbalance_ensembel.py  fedclear.py  fedfv.py  fedict.py  fedmc.py  fedmix.py  fednonlocal.py  fednova.py  fedopt.py  fedprox.py  fedrod.py  fedrs.py  fedsoft.py  moon.py
models/: Resnet_.py  alexnet.py  lenet.py  resnet.py  resnet_balance.py  resnet_deepandwide.py  resnet_fedalign.py  resnet_fednonlocal.py  resnet_model.py  resnet_rs.py  slimmable_ops.py
pyhessian/: utils_hessian.py
script/: run_all_method.sh  run_all_method_client100_alpha*_cifar100.sh  run_all_method_client100_alpha01_cifar10.sh  run_all_method_client100_alpha01_cifar10_epoch1.sh  run_all_method_client100_alpha01_cifar10_epoch20.sh  run_all_method_client100_alpha01_cifar10_epoch5.sh  run_all_method_client100_alpha01_cinic10.sh  run_all_method_client100_alpha03_cifar10.sh  run_all_method_client100_alpha03_cifar100.sh  run_all_method_client100_alpha03_cifar10_epoch1.sh  run_all_method_client100_alpha03_cifar10_epoch20.sh  run_all_method_client100_alpha03_cinic10.sh  run_all_method_client100_alpha05_cifar10.sh  run_all_method_client100_alpha05_cifar100.sh  run_all_method_client100_alpha05_cifar10_epoch1.sh  run_all_method_client100_alpha05_cifar10_epoch20.sh  run_all_method_client100_alpha05_cifar10_epoch5.sh  run_all_method_client100_alpha05_cinic10.sh  run_all_method_client100_label2_cifar10.sh  run_all_method_client20.sh  run_all_method_client20_alpha01.sh  run_all_method_client20_alpha01_cifar10.sh  run_all_method_client20_alpha03_cifar10.sh  run_all_method_client60.sh  run_all_method_client60_alpha05.sh  run_all_method_covid.sh  run_fedbalance_client100_alpha*_*.sh  run_moon.sh  (+6 more)
(+104 files in other folders)
