[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-fl-training"
dynamic = ["version"]
description = 'Framework for FL, which is easy to extend.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/multi-fl-training#readme"
Issues = "https://github.com/unknown/multi-fl-training/issues"
Source = "https://github.com/unknown/multi-fl-training"

[tool.hatch.version]
path = "src/multi_fl_training/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/multi_fl_training tests}"

[tool.coverage.run]
source_pkgs = ["multi_fl_training", "tests"]
branch = true
parallel = true
omit = [
  "src/multi_fl_training/__about__.py",
]

[tool.coverage.paths]
multi_fl_training = ["src/multi_fl_training", "*/multi-fl-training/src/multi_fl_training"]
tests = ["tests", "*/multi-fl-training/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
